--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,25 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 1.3rem;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+  justify-self: center;
 }
 
 .container {
@@ -50,13 +65,13 @@ body {
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   body {
     background: rgb(14, 68, 67);
     height: 100vh;
     width: 100vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -103,6 +118,21 @@ body {
     background: rgb(228, 82, 75);
     padding: 10px 10px;
     text-align: center;
+  }
+
+  footer {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7%;
+  }
+  
+  a {
+    color: #fff;
+    text-decoration: none;
+    justify-self: center;
   }
   
 }
