--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ a {
   padding: 20px 15px;
   border-radius: 5px;
   width: 500px;
+  margin: 0 10px;
 }
 
 .formulario {
@@ -74,11 +75,12 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
   }
 
   .container {
-    width: 400px;
-    margin: 10px;
+    width: 80%;
+    margin: 0 10px;
     display: flex;
     padding: 15px;
     padding-bottom: 10px;
@@ -91,8 +93,10 @@ a {
     display: grid;
     flex-direction: column;
     font-size: 1.2em;
+    width: 100%;
   }
   .formulario input {
+    width: 100%;
     margin: 10px 0;
     height: 25px;
   }
