--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ a {
 }
 .formulario button {
   border: none; 
+  width: 100%;
   margin-top: 6px;
   background: rgb(14, 68, 67);
   color: #fff;
@@ -96,17 +97,17 @@ a {
     width: 100%;
   }
   .formulario input {
-    width: 100%;
     margin: 10px 0;
     height: 25px;
   }
   .formulario button {
     border: none; 
-    margin-top: 2px;
+    padding: initial;
+    box-sizing: border-box;
     background: rgb(14, 68, 67);
     color: #fff;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 1.3rem;
     height: 30px;
     border-radius: 5px;
     cursor: pointer;
